--- a/index.html
+++ b/index.html
@@ -232,5 +232,6 @@
     <script src="js/functions.js"></script>
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+  <script src="js/functions.js"></script>
 </body>
 </html>
