--- a/index.html
+++ b/index.html
@@ -226,11 +226,10 @@
       </div>
     </section>
   </template>
-
+  <script src="js/main.js"></script>
   <!-- Экран загрузки изображения -->
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-
 </body>
 </html>
