--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
   </template>
   <script src="js/main.js"  type = "module"></script>
   <template id="messages">
+    <script type = "module" src="js/main.js"></script>
+    <script src="js/functions.js"></script>
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 </body>
