--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
       </div>
     </section>
   </template>
-  <script type = "module" src="js/main.js"></script>
-  <!-- Экран загрузки изображения -->
+  <script src="js/main.js"  type = "module"></script>
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
