--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </div>
     </section>
   </template>
-  <script type = "module" src="js/main.js"></script>
+  <script src="js/main.js" type = "module"></script>
   <!-- Экран загрузки изображения -->
   <template id="messages">
     <script type = "module" src="js/main.js"></script>
